--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="slider">
         <ul></ul>
-        <span class="previous-arrow arrow"><</span>
+        <span class="previous-arrow-off arrow"><</span>
         <span class="next-arrow arrow">></span>
       </div>
       <div class="articles">
