--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="row">
       <div class="slider">
         <ul></ul>
-        <span class="previous-arrow-off arrow"><</span>
-        <span class="next-arrow arrow">></span>
+        <span id="previous-arrow" class="previous-arrow-off arrow"><</span>
+        <span id="next-arrow" class="next-arrow arrow">></span>
       </div>
       <div class="articles">
         <ul></ul>
