--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="jsResponsiveClass"></div>
   <div class="container">
     <div class="row">
       <div class="slider">
